Build-related fixes